tests/requests/snapshots/can_convert_kgs@measure_request.snap
---
source: tests/requests/measure.rs
expression: random_weight
---
RandomWeightResponse {
    when: DATEZ,
    input_amt: "1.0",
    input_type: Kgs,
    output_weight: "1,000.0",
    units: "grams",
}
