tests/requests/snapshots/can_convert_lbs@measure_request.snap
---
source: tests/requests/measure.rs
expression: random_weight
---
RandomWeightResponse {
    input_amt: 100.0,
    input_type: Lbs,
    output_weight: "90.72 gramburgers",
}
