tests/requests/snapshots/can_create@measure_request.snap
---
source: tests/requests/measure.rs
expression: measure
---
Measure {
    id: 1,
    name: "gram",
    name_plural: "grams",
    grams: 1.0,
}
