tests/requests/snapshots/can_delete@measure_request.snap
---
source: tests/requests/measure.rs
expression: "(all_measures, measures)"
---
(
    [
        Measure {
            id: 1,
            name: "gram",
            name_plural: "grams",
            grams: 1.0,
        },
    ],
    [],
)
